--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
 </head>
 
 <body class="bg-gray-100 text-gray-800 font-sans min-h-screen flex flex-col">
-
+ 
+<!--  -->
+  <!-- Nama : Rama Maulana -->
+  <!-- Nim : 240401010047 -->
+  <!-- Tim Edukasi Teknologi Dasar -->
+  <!-- TechLearners ID -->
+<!--  -->
   <!-- Navbar -->
   <nav
     class="bg-gradient-to-r from-blue-700 via-blue-600 to-blue-700 bg-[length:200%_200%] animate-gradient text-white px-4 py-3 flex justify-between items-center sticky top-0 z-50 shadow-lg">
